Bug 476731 - Media element should fire error event when src is a 404 - r=doublec sr=roc
UltraBlame original commit: 364777bc90b575e658f25d90f535644cd083dc78

--- a/content/media/video/test/file_access_controls.html
+++ b/content/media/video/test/file_access_controls.html
@@ -5,6 +5,30 @@ html
 head
 >
 <
+/
+head
+>
+<
+body
+onload
+=
+"
+setTimeout
+(
+load
+0
+)
+;
+"
+onunload
+=
+"
+done
+(
+)
+"
+>
+<
 script
 >
 /
@@ -888,8 +912,80 @@ enforce_same_site_origin
 true
 )
 ;
+video
+=
+document
+.
+createElement
+(
+'
+video
+'
+)
+;
+video
+.
+addEventListener
+(
+'
+loadeddata
+'
+function
+(
+)
+{
+result
+(
+'
+loaded
+'
+)
+;
+}
+false
+)
+;
+video
+.
+addEventListener
+(
+'
+error
+'
+function
+(
+)
+{
+result
+(
+'
+error
+'
+)
+;
+}
+false
+)
+;
+video
+.
+id
+=
+'
+video
+'
+;
 nextTest
 (
+)
+;
+document
+.
+body
+.
+appendChild
+(
+video
 )
 ;
 }
@@ -1138,77 +1234,6 @@ done
 <
 /
 script
->
-<
-/
-head
->
-<
-body
-onload
-=
-"
-load
-(
-)
-;
-"
-onunload
-=
-"
-done
-(
-)
-"
->
-<
-!
--
--
-Change
-onloadedfirstframe
-to
-onloadeddata
-after
-bug
-462570
-lands
--
--
->
-<
-video
-id
-=
-"
-video
-"
-onloadeddata
-=
-"
-result
-(
-'
-loaded
-'
-)
-;
-"
-onerror
-=
-"
-result
-(
-'
-error
-'
-)
-;
-"
->
-<
-/
-video
 >
 <
 /
