--- a/content/media/video/test/test_autoplay.html
+++ b/content/media/video/test/test_autoplay.html
@@ -114,6 +114,16 @@ id
 '
 v1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
@@ -126,6 +136,16 @@ id
 '
 a1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
@@ -138,6 +158,16 @@ id
 '
 v2
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 autoplay
 >
 <
@@ -151,6 +181,16 @@ id
 '
 a2
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 autoplay
 >
 <
