--- a/content/media/video/test/test_bug463162.xhtml
+++ b/content/media/video/test/test_bug463162.xhtml
@@ -245,6 +245,16 @@ id
 '
 a1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 sauce
@@ -277,6 +287,16 @@ id
 '
 a2
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 source
@@ -309,6 +329,16 @@ id
 '
 a3
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 html
@@ -343,6 +373,16 @@ id
 '
 a4
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 svg
