--- a/content/media/video/test/test_constants.html
+++ b/content/media/video/test/test_constants.html
@@ -148,6 +148,16 @@ body
 >
 <
 video
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 source
@@ -158,6 +168,16 @@ video
 >
 <
 audio
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 source
