--- a/content/media/video/test/test_controls.html
+++ b/content/media/video/test/test_controls.html
@@ -112,6 +112,16 @@ id
 '
 v1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
@@ -124,6 +134,16 @@ id
 '
 a1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
@@ -136,6 +156,16 @@ id
 '
 v2
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 controls
 >
 <
@@ -149,6 +179,16 @@ id
 '
 a2
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 controls
 >
 <
