--- a/content/media/video/test/test_currentTime.html
+++ b/content/media/video/test/test_currentTime.html
@@ -112,6 +112,16 @@ id
 '
 v1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
@@ -124,6 +134,16 @@ id
 '
 a1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
