--- a/content/media/video/test/test_volume.html
+++ b/content/media/video/test/test_volume.html
@@ -114,6 +114,16 @@ id
 '
 v1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
@@ -126,6 +136,16 @@ id
 '
 a1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
