--- a/content/media/video/test/test_decoder_disable.html
+++ b/content/media/video/test/test_decoder_disable.html
@@ -321,6 +321,265 @@ enabled
 false
 )
 ;
+var
+gLoadError
+=
+new
+Object
+(
+)
+;
+gLoadError
+[
+'
+video1
+'
+]
+=
+0
+;
+gLoadError
+[
+'
+video2
+'
+]
+=
+0
+;
+gLoadError
+[
+'
+video3
+'
+]
+=
+0
+;
+var
+gErrorCount
+=
+0
+;
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+function
+finishTest
+(
+)
+{
+is
+(
+document
+.
+getElementById
+(
+'
+video1
+'
+)
+.
+currentSrc
+"
+"
+'
+video1
+.
+currentSrc
+=
+=
+"
+"
+'
+)
+;
+is
+(
+document
+.
+getElementById
+(
+'
+video2
+'
+)
+.
+currentSrc
+"
+"
+'
+video2
+.
+currentSrc
+=
+=
+"
+"
+'
+)
+;
+is
+(
+document
+.
+getElementById
+(
+'
+video3
+'
+)
+.
+currentSrc
+"
+"
+'
+video3
+.
+currentSrc
+=
+=
+"
+"
+'
+)
+;
+is
+(
+gLoadError
+[
+'
+video1
+'
+]
+1
+"
+Load
+error
+on
+video1
+"
+)
+;
+is
+(
+gLoadError
+[
+'
+video2
+'
+]
+1
+"
+Load
+error
+on
+video2
+"
+)
+;
+is
+(
+gLoadError
+[
+'
+video3
+'
+]
+1
+"
+Load
+error
+on
+video3
+"
+)
+;
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+branch
+.
+setBoolPref
+(
+"
+ogg
+.
+enabled
+"
+gOldOggPref
+)
+;
+branch
+.
+setBoolPref
+(
+"
+wave
+.
+enabled
+"
+gOldWavePref
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
+function
+videoError
+(
+event
+id
+)
+{
+event
+.
+stopPropagation
+(
+)
+;
+gLoadError
+[
+id
+]
++
++
+;
+gErrorCount
++
++
+;
+if
+(
+gErrorCount
+=
+=
+3
+)
+{
+finishTest
+(
+)
+;
+}
+}
 <
 /
 script
@@ -331,6 +590,18 @@ id
 =
 "
 video1
+"
+onerror
+=
+"
+videoError
+(
+event
+'
+video1
+'
+)
+;
 "
 >
 <
@@ -387,6 +658,18 @@ src
 .
 ogv
 "
+onerror
+=
+"
+videoError
+(
+event
+'
+video2
+'
+)
+;
+"
 >
 <
 /
@@ -406,172 +689,22 @@ r11025_u8_c1
 .
 wav
 "
->
-<
-/
-video
->
-<
-script
->
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-function
-doTest
-(
-)
-{
-is
-(
-document
-.
-getElementById
-(
-'
-video1
-'
-)
-.
-currentSrc
+onerror
+=
 "
-"
-)
-;
-is
+videoError
 (
-document
-.
-getElementById
-(
-'
-video2
-'
-)
-.
-currentSrc
-"
-"
-)
-;
-is
-(
-document
-.
-getElementById
-(
+event
 '
 video3
 '
 )
-.
-currentSrc
-"
-"
-)
 ;
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
 "
-UniversalXPConnect
-"
-)
-;
-branch
-.
-setBoolPref
-(
-"
-ogg
-.
-enabled
-"
-gOldOggPref
-)
-;
-branch
-.
-setBoolPref
-(
-"
-wave
-.
-enabled
-"
-gOldWavePref
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-}
-/
-/
-Using
-a
-timeout
-here
-sucks
-but
-we
-currently
-have
-no
-way
-/
-/
-to
-be
-notified
-that
-the
-element
-couldn
-'
-t
-load
-.
-At
-least
-if
-this
-timeout
-/
-/
-happens
-"
-too
-early
-"
-the
-test
-will
-pass
-instead
-of
-failing
-.
-setTimeout
-(
-doTest
-1000
-)
-;
+>
 <
 /
-script
+video
 >
 <
 /
