--- a/content/media/video/test/test_media_selection.html
+++ b/content/media/video/test/test_media_selection.html
@@ -163,6 +163,28 @@ video
 '
 )
 ;
+e
+.
+addEventListener
+(
+'
+error
+'
+function
+(
+e
+)
+{
+e
+.
+stopPropagation
+(
+)
+;
+}
+false
+)
+;
 if
 (
 expect_load
