Backed out changeset 364777bc90b5 due to test failures
UltraBlame original commit: f51e5b101ca5281b98ce88d0a2bd81dafe0e0700

--- a/content/media/video/test/file_access_controls.html
+++ b/content/media/video/test/file_access_controls.html
@@ -5,30 +5,6 @@ html
 head
 >
 <
-/
-head
->
-<
-body
-onload
-=
-"
-setTimeout
-(
-load
-0
-)
-;
-"
-onunload
-=
-"
-done
-(
-)
-"
->
-<
 script
 >
 /
@@ -912,80 +888,8 @@ enforce_same_site_origin
 true
 )
 ;
-video
-=
-document
-.
-createElement
-(
-'
-video
-'
-)
-;
-video
-.
-addEventListener
-(
-'
-loadeddata
-'
-function
-(
-)
-{
-result
-(
-'
-loaded
-'
-)
-;
-}
-false
-)
-;
-video
-.
-addEventListener
-(
-'
-error
-'
-function
-(
-)
-{
-result
-(
-'
-error
-'
-)
-;
-}
-false
-)
-;
-video
-.
-id
-=
-'
-video
-'
-;
 nextTest
 (
-)
-;
-document
-.
-body
-.
-appendChild
-(
-video
 )
 ;
 }
@@ -1234,6 +1138,77 @@ done
 <
 /
 script
+>
+<
+/
+head
+>
+<
+body
+onload
+=
+"
+load
+(
+)
+;
+"
+onunload
+=
+"
+done
+(
+)
+"
+>
+<
+!
+-
+-
+Change
+onloadedfirstframe
+to
+onloadeddata
+after
+bug
+462570
+lands
+-
+-
+>
+<
+video
+id
+=
+"
+video
+"
+onloadeddata
+=
+"
+result
+(
+'
+loaded
+'
+)
+;
+"
+onerror
+=
+"
+result
+(
+'
+error
+'
+)
+;
+"
+>
+<
+/
+video
 >
 <
 /
