Bug 477666: namespaces broken after an appcache update.  r=honzab, sr=bz
UltraBlame original commit: 78038be8f0f24324327143b7227f494d2d87c8a2

--- a/dom/tests/mochitest/ajax/offline/test_changingManifest.html
+++ b/dom/tests/mochitest/ajax/offline/test_changingManifest.html
@@ -354,6 +354,118 @@ update
 ;
 /
 /
+The
+second
+manifest
+has
+no
+NETWORK
+entry
+but
+we
+are
+still
+/
+/
+associated
+with
+the
+first
+version
+of
+the
+manifest
+so
+we
+should
+/
+/
+be
+able
+to
+access
+the
+whitelisted
+entry
+.
+try
+{
+var
+xhr
+=
+new
+XMLHttpRequest
+(
+)
+;
+xhr
+.
+open
+(
+"
+GET
+"
+"
+onwhitelist
+.
+html
+"
+false
+)
+;
+xhr
+.
+send
+(
+)
+;
+OfflineTest
+.
+ok
+(
+true
+"
+Fetched
+from
+the
+initial
+cache
+'
+s
+whitelist
+.
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+OfflineTest
+.
+ok
+(
+false
+"
+Failed
+to
+fetch
+from
+the
+initial
+cache
+'
+s
+whitelist
+.
+"
+)
+;
+}
+/
+/
 Get
 the
 initial
