bug 477606 - selectsize should be exposed as listbox, r=davidb, r=MarcoZ
UltraBlame original commit: 37b0d6169084a530a1fd2d6bf583c836d7e3f8e8

--- a/accessible/tests/mochitest/test_nsIAccessible_selects.html
+++ b/accessible/tests/mochitest/test_nsIAccessible_selects.html
@@ -619,7 +619,7 @@ item
 roles
 =
 [
-ROLE_LIST
+ROLE_LISTBOX
 /
 /
 root
@@ -843,7 +843,7 @@ ROLE_TEXT_LEAF
 /
 inner
 text
-ROLE_LIST
+ROLE_LISTBOX
 /
 /
 listbox
