--- a/accessible/tests/mochitest/test_relations.html
+++ b/accessible/tests/mochitest/test_relations.html
@@ -257,13 +257,26 @@ label2
 /
 aria
 -
-describedby
+labelledby
+multiple
+relations
 testRelation
 (
 "
-descr1
+label3
 "
-RELATION_DESCRIPTION_FOR
+RELATION_LABEL_FOR
+"
+checkbox3
+"
+)
+;
+testRelation
+(
+"
+label4
+"
+RELATION_LABEL_FOR
 "
 checkbox3
 "
@@ -273,6 +286,38 @@ testRelation
 (
 "
 checkbox3
+"
+RELATION_LABELLED_BY
+[
+"
+label3
+"
+"
+label4
+"
+]
+)
+;
+/
+/
+aria
+-
+describedby
+testRelation
+(
+"
+descr1
+"
+RELATION_DESCRIPTION_FOR
+"
+checkbox4
+"
+)
+;
+testRelation
+(
+"
+checkbox4
 "
 RELATION_DESCRIBED_BY
 "
@@ -282,11 +327,69 @@ descr1
 ;
 /
 /
+aria
+-
+describedby
+multiple
+relations
+testRelation
+(
+"
+descr2
+"
+RELATION_DESCRIPTION_FOR
+"
+checkbox5
+"
+)
+;
+testRelation
+(
+"
+descr3
+"
+RELATION_DESCRIPTION_FOR
+"
+checkbox5
+"
+)
+;
+testRelation
+(
+"
+checkbox5
+"
+RELATION_DESCRIBED_BY
+[
+"
+descr2
+"
+"
+descr3
+"
+]
+)
+;
+/
+/
 aria_owns
+multiple
+relations
 testRelation
 (
 "
 treeitem1
+"
+RELATION_NODE_CHILD_OF
+"
+tree
+"
+)
+;
+testRelation
+(
+"
+treeitem2
 "
 RELATION_NODE_CHILD_OF
 "
@@ -308,17 +411,6 @@ role
 testRelation
 (
 "
-treeitem2
-"
-RELATION_NODE_CHILD_OF
-"
-tree
-"
-)
-;
-testRelation
-(
-"
 treeitem3
 "
 RELATION_NODE_CHILD_OF
@@ -334,7 +426,18 @@ treeitem4
 "
 RELATION_NODE_CHILD_OF
 "
-treeitem3
+tree
+"
+)
+;
+testRelation
+(
+"
+treeitem5
+"
+RELATION_NODE_CHILD_OF
+"
+treeitem4
 "
 )
 ;
@@ -437,6 +540,51 @@ tabpanel
 /
 aria
 -
+controls
+multiple
+relations
+testRelation
+(
+"
+lr1
+"
+RELATION_CONTROLLED_BY
+"
+button
+"
+)
+;
+testRelation
+(
+"
+lr2
+"
+RELATION_CONTROLLED_BY
+"
+button
+"
+)
+;
+testRelation
+(
+"
+button
+"
+RELATION_CONTROLLER_FOR
+[
+"
+lr1
+"
+"
+lr2
+"
+]
+)
+;
+/
+/
+aria
+-
 flowto
 testRelation
 (
@@ -457,6 +605,51 @@ flowfrom
 RELATION_FLOWS_FROM
 "
 flowto
+"
+)
+;
+/
+/
+aria
+-
+flowto
+multiple
+relations
+testRelation
+(
+"
+flowto1
+"
+RELATION_FLOWS_TO
+[
+"
+flowfrom1
+"
+"
+flowfrom2
+"
+]
+)
+;
+testRelation
+(
+"
+flowfrom1
+"
+RELATION_FLOWS_FROM
+"
+flowto1
+"
+)
+;
+testRelation
+(
+"
+flowfrom2
+"
+RELATION_FLOWS_FROM
+"
+flowto1
 "
 )
 ;
@@ -819,7 +1012,61 @@ labelledby
 "
 label2
 "
+>
+<
 /
+span
+>
+<
+span
+id
+=
+"
+label3
+"
+>
+label1
+<
+/
+span
+>
+<
+span
+id
+=
+"
+label4
+"
+>
+label2
+<
+/
+span
+>
+<
+span
+role
+=
+"
+checkbox
+"
+id
+=
+"
+checkbox3
+"
+aria
+-
+labelledby
+=
+"
+label3
+label4
+"
+>
+<
+/
+span
 >
 <
 span
@@ -844,7 +1091,7 @@ checkbox
 id
 =
 "
-checkbox3
+checkbox4
 "
 aria
 -
@@ -853,7 +1100,61 @@ describedby
 "
 descr1
 "
+>
+<
 /
+span
+>
+<
+span
+id
+=
+"
+descr2
+"
+>
+description1
+<
+/
+span
+>
+<
+span
+id
+=
+"
+descr3
+"
+>
+description2
+<
+/
+span
+>
+<
+span
+role
+=
+"
+checkbox
+"
+id
+=
+"
+checkbox5
+"
+aria
+-
+describedby
+=
+"
+descr2
+descr3
+"
+>
+<
+/
+span
 >
 <
 div
@@ -869,6 +1170,24 @@ treeitem1
 "
 >
 Yellow
+<
+/
+div
+>
+<
+div
+role
+=
+"
+treeitem
+"
+id
+=
+"
+treeitem2
+"
+>
+Orange
 <
 /
 div
@@ -891,6 +1210,7 @@ owns
 =
 "
 treeitem1
+treeitem2
 "
 >
 <
@@ -903,7 +1223,7 @@ treeitem
 id
 =
 "
-treeitem2
+treeitem3
 "
 >
 Blue
@@ -921,7 +1241,7 @@ treeitem
 id
 =
 "
-treeitem3
+treeitem4
 "
 aria
 -
@@ -946,7 +1266,7 @@ treeitem
 id
 =
 "
-treeitem4
+treeitem5
 "
 aria
 -
@@ -1039,6 +1359,100 @@ tabpanel
 div
 >
 <
+div
+id
+=
+"
+lr1
+"
+aria
+-
+live
+=
+"
+assertive
+"
+>
+1
+<
+/
+div
+>
+<
+div
+id
+=
+"
+lr2
+"
+aria
+-
+live
+=
+"
+assertive
+"
+>
+a
+<
+/
+div
+>
+<
+input
+type
+=
+"
+button
+"
+id
+=
+"
+button
+"
+aria
+-
+controls
+=
+"
+lr1
+lr2
+"
+onclick
+=
+"
+getNode
+(
+'
+lr1
+'
+)
+.
+textContent
++
+=
+'
+1
+'
+;
+getNode
+(
+'
+lr2
+'
+)
+.
+textContent
++
+=
+'
+a
+'
+;
+"
+/
+>
+<
 span
 id
 =
@@ -1065,6 +1479,56 @@ id
 =
 "
 flowfrom
+"
+>
+flow
+from
+<
+/
+span
+>
+<
+span
+id
+=
+"
+flowto1
+"
+aria
+-
+flowto
+=
+"
+flowfrom1
+flowfrom2
+"
+>
+flow
+to
+<
+/
+span
+>
+<
+span
+id
+=
+"
+flowfrom1
+"
+>
+flow
+from
+<
+/
+span
+>
+<
+span
+id
+=
+"
+flowfrom2
 "
 >
 flow
