bug 477572 - Properly support indeterminate checkboxes with the right a11y notifications, r=surkov, sr=roc
UltraBlame original commit: 61880bdd459489bce737710d1412602ca60577e6

--- a/accessible/tests/mochitest/test_states.html
+++ b/accessible/tests/mochitest/test_states.html
@@ -210,6 +210,56 @@ combobox_expanded
 STATE_EXPANDED
 )
 ;
+var
+checkboxElem
+=
+getNode
+(
+"
+check1
+"
+)
+;
+if
+(
+checkboxElem
+)
+{
+testStates
+(
+checkboxElem
+STATE_CHECKED
+)
+;
+checkboxElem
+.
+checked
+=
+false
+;
+testStates
+(
+checkboxElem
+0
+0
+STATE_CHECKED
+)
+;
+checkboxElem
+.
+indeterminate
+=
+true
+;
+testStates
+(
+checkboxElem
+STATE_MIXED
+0
+STATE_CHECKED
+)
+;
+}
 SimpleTest
 .
 finish
@@ -367,6 +417,31 @@ combobox
 <
 /
 div
+>
+<
+input
+type
+=
+"
+checkbox
+"
+id
+=
+"
+check1
+"
+value
+=
+"
+I
+agree
+"
+checked
+=
+"
+true
+"
+/
 >
 <
 /
