Bug 475522 -  walk subtree once for all text attributes, r=marcoz, davidb, sr=neil
UltraBlame original commit: 4767c92771e658f69cc9d908b2fd147f9b0d37bc

--- a/accessible/tests/mochitest/test_textattrs.html
+++ b/accessible/tests/mochitest/test_textattrs.html
@@ -464,6 +464,7 @@ testTextAttrs
 ID
 0
 attrs
+defAttrs
 0
 11
 )
@@ -473,6 +474,7 @@ testTextAttrs
 ID
 11
 misspelledAttrs
+defAttrs
 11
 17
 )
@@ -482,6 +484,7 @@ testTextAttrs
 ID
 17
 attrs
+defAttrs
 17
 18
 )
@@ -491,6 +494,7 @@ testTextAttrs
 ID
 18
 misspelledAttrs
+defAttrs
 18
 22
 )
@@ -737,6 +741,7 @@ testTextAttrs
 ID
 0
 attrs
+defAttrs
 0
 7
 )
@@ -781,6 +786,7 @@ testTextAttrs
 ID
 7
 attrs
+defAttrs
 7
 11
 )
@@ -795,6 +801,7 @@ testTextAttrs
 ID
 12
 attrs
+defAttrs
 11
 18
 )
@@ -991,6 +998,7 @@ testTextAttrs
 ID
 0
 attrs
+defAttrs
 0
 7
 )
@@ -1035,6 +1043,7 @@ testTextAttrs
 ID
 7
 attrs
+defAttrs
 7
 12
 )
@@ -1088,6 +1097,7 @@ testTextAttrs
 ID
 13
 attrs
+defAttrs
 12
 19
 )
@@ -1130,6 +1140,7 @@ testTextAttrs
 ID
 20
 attrs
+defAttrs
 19
 23
 )
@@ -1144,6 +1155,7 @@ testTextAttrs
 ID
 24
 attrs
+defAttrs
 23
 30
 )
@@ -1363,6 +1375,7 @@ testTextAttrs
 ID
 0
 attrs
+defAttrs
 0
 6
 )
@@ -1405,6 +1418,7 @@ testTextAttrs
 ID
 6
 attrs
+defAttrs
 6
 26
 )
@@ -1445,6 +1459,7 @@ testTextAttrs
 ID
 26
 attrs
+defAttrs
 26
 27
 )
@@ -1494,6 +1509,7 @@ testTextAttrs
 ID
 27
 attrs
+defAttrs
 27
 50
 )
@@ -1718,6 +1734,7 @@ testTextAttrs
 ID
 0
 attrs
+defAttrs
 0
 16
 )
@@ -1762,6 +1779,7 @@ testTextAttrs
 ID
 16
 attrs
+defAttrs
 16
 33
 )
@@ -1802,6 +1820,7 @@ testTextAttrs
 ID
 34
 attrs
+defAttrs
 33
 46
 )
@@ -2026,6 +2045,7 @@ testTextAttrs
 ID
 0
 attrs
+defAttrs
 0
 5
 )
@@ -2040,6 +2060,7 @@ testTextAttrs
 ID
 7
 attrs
+defAttrs
 5
 8
 )
@@ -2086,6 +2107,7 @@ testTextAttrs
 ID
 9
 attrs
+defAttrs
 8
 11
 )
@@ -2100,6 +2122,7 @@ testTextAttrs
 ID
 11
 attrs
+defAttrs
 11
 18
 )
@@ -2305,6 +2328,7 @@ testTextAttrs
 ID
 0
 attrs
+defAttrs
 0
 5
 )
@@ -2358,6 +2382,7 @@ testTextAttrs
 ID
 5
 attrs
+defAttrs
 5
 13
 )
@@ -2372,6 +2397,7 @@ testTextAttrs
 ID
 13
 attrs
+defAttrs
 13
 27
 )
@@ -2416,6 +2442,7 @@ testTextAttrs
 ID
 27
 attrs
+defAttrs
 27
 35
 )
@@ -2430,6 +2457,7 @@ testTextAttrs
 ID
 35
 attrs
+defAttrs
 35
 39
 )
@@ -2483,6 +2511,7 @@ testTextAttrs
 ID
 39
 attrs
+defAttrs
 39
 50
 )
@@ -2497,6 +2526,7 @@ testTextAttrs
 ID
 50
 attrs
+defAttrs
 50
 55
 )
@@ -2541,6 +2571,7 @@ testTextAttrs
 ID
 55
 attrs
+defAttrs
 55
 64
 )
@@ -2654,6 +2685,13 @@ defAttrs
 =
 {
 "
+language
+"
+:
+"
+en
+"
+"
 font
 -
 style
@@ -2744,6 +2782,7 @@ testTextAttrs
 ID
 0
 attrs
+defAttrs
 0
 12
 )
@@ -2751,13 +2790,6 @@ attrs
 attrs
 =
 {
-"
-language
-"
-:
-"
-en
-"
 }
 ;
 testTextAttrs
@@ -2765,6 +2797,7 @@ testTextAttrs
 ID
 12
 attrs
+defAttrs
 12
 13
 )
@@ -2798,13 +2831,6 @@ attrs
 =
 {
 "
-language
-"
-:
-"
-en
-"
-"
 background
 -
 color
@@ -2820,6 +2846,7 @@ testTextAttrs
 ID
 13
 attrs
+defAttrs
 13
 26
 )
@@ -2827,13 +2854,6 @@ attrs
 attrs
 =
 {
-"
-language
-"
-:
-"
-en
-"
 }
 ;
 testTextAttrs
@@ -2841,6 +2861,7 @@ testTextAttrs
 ID
 26
 attrs
+defAttrs
 26
 27
 )
@@ -2862,6 +2883,7 @@ testTextAttrs
 ID
 27
 attrs
+defAttrs
 27
 42
 )
@@ -2869,13 +2891,6 @@ attrs
 attrs
 =
 {
-"
-language
-"
-:
-"
-en
-"
 }
 ;
 testTextAttrs
@@ -2883,8 +2898,9 @@ testTextAttrs
 ID
 42
 attrs
+defAttrs
 42
-43
+50
 )
 ;
 attrs
@@ -2897,7 +2913,8 @@ testTextAttrs
 ID
 43
 attrs
-43
+defAttrs
+42
 50
 )
 ;
@@ -2947,6 +2964,7 @@ testTextAttrs
 ID
 50
 attrs
+defAttrs
 50
 57
 )
@@ -2998,6 +3016,7 @@ testTextAttrs
 ID
 57
 attrs
+defAttrs
 57
 61
 )
@@ -3038,8 +3057,1045 @@ testTextAttrs
 ID
 61
 attrs
+defAttrs
 61
 68
+)
+;
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+area9
+different
+single
+style
+spans
+in
+styled
+paragraph
+ID
+=
+"
+area9
+"
+;
+tempElem
+=
+document
+.
+getElementById
+(
+ID
+)
+;
+gComputedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
+(
+tempElem
+"
+"
+)
+;
+defAttrs
+=
+{
+"
+font
+-
+style
+"
+:
+gComputedStyle
+.
+fontStyle
+"
+font
+-
+size
+"
+:
+"
+10pt
+"
+"
+background
+-
+color
+"
+:
+"
+rgb
+(
+255
+255
+255
+)
+"
+"
+font
+-
+weight
+"
+:
+gComputedStyle
+.
+fontWeight
+"
+color
+"
+:
+gComputedStyle
+.
+color
+"
+font
+-
+family
+"
+:
+gComputedStyle
+.
+fontFamily
+"
+text
+-
+position
+"
+:
+gComputedStyle
+.
+verticalAlign
+}
+;
+testDefaultTextAttrs
+(
+ID
+defAttrs
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+0
+attrs
+defAttrs
+0
+6
+)
+;
+attrs
+=
+{
+"
+font
+-
+size
+"
+:
+"
+12pt
+"
+}
+;
+testTextAttrs
+(
+ID
+7
+attrs
+defAttrs
+6
+12
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+13
+attrs
+defAttrs
+12
+21
+)
+;
+/
+/
+Walk
+to
+the
+span
+with
+the
+different
+background
+color
+tempElem
+=
+tempElem
+.
+firstChild
+.
+nextSibling
+.
+nextSibling
+.
+nextSibling
+;
+gComputedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
+(
+tempElem
+"
+"
+)
+;
+attrs
+=
+{
+"
+background
+-
+color
+"
+:
+gComputedStyle
+.
+backgroundColor
+}
+;
+testTextAttrs
+(
+ID
+22
+attrs
+defAttrs
+21
+36
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+37
+attrs
+defAttrs
+36
+44
+)
+;
+/
+/
+Walk
+from
+the
+background
+color
+span
+to
+the
+one
+with
+font
+-
+style
+tempElem
+=
+tempElem
+.
+nextSibling
+.
+nextSibling
+;
+gComputedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
+(
+tempElem
+"
+"
+)
+;
+attrs
+=
+{
+"
+font
+-
+style
+"
+:
+gComputedStyle
+.
+fontStyle
+}
+;
+testTextAttrs
+(
+ID
+45
+attrs
+defAttrs
+44
+61
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+62
+attrs
+defAttrs
+61
+69
+)
+;
+/
+/
+Walk
+from
+span
+with
+font
+-
+style
+to
+the
+one
+with
+font
+-
+family
+.
+tempElem
+=
+tempElem
+.
+nextSibling
+.
+nextSibling
+;
+gComputedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
+(
+tempElem
+"
+"
+)
+;
+attrs
+=
+{
+"
+font
+-
+family
+"
+:
+gComputedStyle
+.
+fontFamily
+}
+;
+testTextAttrs
+(
+ID
+70
+attrs
+defAttrs
+69
+83
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+84
+attrs
+defAttrs
+83
+91
+)
+;
+attrs
+=
+{
+"
+text
+-
+underline
+-
+style
+"
+:
+"
+solid
+"
+}
+;
+testTextAttrs
+(
+ID
+92
+attrs
+defAttrs
+91
+101
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+102
+attrs
+defAttrs
+101
+109
+)
+;
+attrs
+=
+{
+"
+text
+-
+line
+-
+through
+-
+style
+"
+:
+"
+solid
+"
+}
+;
+testTextAttrs
+(
+ID
+110
+attrs
+defAttrs
+109
+122
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+123
+attrs
+defAttrs
+122
+130
+)
+;
+/
+/
+area10
+different
+single
+style
+spans
+in
+non
+-
+styled
+paragraph
+ID
+=
+"
+area10
+"
+;
+tempElem
+=
+document
+.
+getElementById
+(
+ID
+)
+;
+gComputedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
+(
+tempElem
+"
+"
+)
+;
+defAttrs
+=
+{
+"
+font
+-
+style
+"
+:
+gComputedStyle
+.
+fontStyle
+"
+font
+-
+size
+"
+:
+"
+12pt
+"
+"
+background
+-
+color
+"
+:
+"
+rgb
+(
+255
+255
+255
+)
+"
+"
+font
+-
+weight
+"
+:
+gComputedStyle
+.
+fontWeight
+"
+color
+"
+:
+gComputedStyle
+.
+color
+"
+font
+-
+family
+"
+:
+gComputedStyle
+.
+fontFamily
+"
+text
+-
+position
+"
+:
+gComputedStyle
+.
+verticalAlign
+}
+;
+testDefaultTextAttrs
+(
+ID
+defAttrs
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+0
+attrs
+defAttrs
+0
+7
+)
+;
+attrs
+=
+{
+"
+font
+-
+size
+"
+:
+"
+14pt
+"
+}
+;
+testTextAttrs
+(
+ID
+7
+attrs
+defAttrs
+7
+13
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+13
+attrs
+defAttrs
+13
+22
+)
+;
+/
+/
+Walk
+to
+the
+span
+with
+the
+different
+background
+color
+tempElem
+=
+tempElem
+.
+firstChild
+.
+nextSibling
+.
+nextSibling
+.
+nextSibling
+;
+gComputedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
+(
+tempElem
+"
+"
+)
+;
+attrs
+=
+{
+"
+background
+-
+color
+"
+:
+gComputedStyle
+.
+backgroundColor
+}
+;
+testTextAttrs
+(
+ID
+23
+attrs
+defAttrs
+22
+37
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+38
+attrs
+defAttrs
+37
+45
+)
+;
+/
+/
+Walk
+from
+the
+background
+color
+span
+to
+the
+one
+with
+font
+-
+style
+tempElem
+=
+tempElem
+.
+nextSibling
+.
+nextSibling
+;
+gComputedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
+(
+tempElem
+"
+"
+)
+;
+attrs
+=
+{
+"
+font
+-
+style
+"
+:
+gComputedStyle
+.
+fontStyle
+}
+;
+testTextAttrs
+(
+ID
+46
+attrs
+defAttrs
+45
+62
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+63
+attrs
+defAttrs
+62
+70
+)
+;
+/
+/
+Walk
+from
+span
+with
+font
+-
+style
+to
+the
+one
+with
+font
+-
+family
+.
+tempElem
+=
+tempElem
+.
+nextSibling
+.
+nextSibling
+;
+gComputedStyle
+=
+document
+.
+defaultView
+.
+getComputedStyle
+(
+tempElem
+"
+"
+)
+;
+attrs
+=
+{
+"
+font
+-
+family
+"
+:
+gComputedStyle
+.
+fontFamily
+}
+;
+testTextAttrs
+(
+ID
+71
+attrs
+defAttrs
+70
+84
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+85
+attrs
+defAttrs
+84
+92
+)
+;
+attrs
+=
+{
+"
+text
+-
+underline
+-
+style
+"
+:
+"
+solid
+"
+}
+;
+testTextAttrs
+(
+ID
+93
+attrs
+defAttrs
+92
+102
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+103
+attrs
+defAttrs
+102
+110
+)
+;
+attrs
+=
+{
+"
+text
+-
+line
+-
+through
+-
+style
+"
+:
+"
+solid
+"
+}
+;
+testTextAttrs
+(
+ID
+111
+attrs
+defAttrs
+110
+123
+)
+;
+attrs
+=
+{
+}
+;
+testTextAttrs
+(
+ID
+124
+attrs
+defAttrs
+123
+131
 )
 ;
 /
@@ -3729,9 +4785,273 @@ p
 id
 =
 "
-output
+area9
 "
+style
+=
+"
+font
+-
+size
+:
+smaller
+"
+>
+Small
+<
+span
+style
+=
+"
+font
+-
+size
+:
+120
+%
+"
+>
+bigger
+<
 /
+span
+>
+smaller
+<
+span
+style
+=
+"
+background
+-
+color
+:
+blue
+;
+"
+>
+background
+blue
+<
+/
+span
+>
+normal
+<
+span
+style
+=
+"
+font
+-
+style
+:
+italic
+;
+"
+>
+Different
+styling
+<
+/
+span
+>
+normal
+<
+span
+style
+=
+"
+font
+-
+family
+:
+tahoma
+;
+"
+>
+Different
+font
+<
+/
+span
+>
+normal
+<
+span
+style
+=
+"
+text
+-
+decoration
+:
+underline
+;
+"
+>
+underlined
+<
+/
+span
+>
+normal
+<
+span
+style
+=
+"
+text
+-
+decoration
+:
+line
+-
+through
+;
+"
+>
+strikethrough
+<
+/
+span
+>
+normal
+<
+/
+p
+>
+<
+p
+id
+=
+"
+area10
+"
+>
+Normal
+<
+span
+style
+=
+"
+font
+-
+size
+:
+120
+%
+"
+>
+bigger
+<
+/
+span
+>
+smaller
+<
+span
+style
+=
+"
+background
+-
+color
+:
+blue
+;
+"
+>
+background
+blue
+<
+/
+span
+>
+normal
+<
+span
+style
+=
+"
+font
+-
+style
+:
+italic
+;
+"
+>
+Different
+styling
+<
+/
+span
+>
+normal
+<
+span
+style
+=
+"
+font
+-
+family
+:
+tahoma
+;
+"
+>
+Different
+font
+<
+/
+span
+>
+normal
+<
+span
+style
+=
+"
+text
+-
+decoration
+:
+underline
+;
+"
+>
+underlined
+<
+/
+span
+>
+normal
+<
+span
+style
+=
+"
+text
+-
+decoration
+:
+line
+-
+through
+;
+"
+>
+strikethrough
+<
+/
+span
+>
+normal
+<
+/
+p
 >
 <
 /
