Backout changeset 4767c92771e6 from bug 475522 because of burning tree
UltraBlame original commit: 4bb932755d5c4d2a79ce867b256e95cbb3118fcd

--- a/accessible/tests/mochitest/test_textattrs.html
+++ b/accessible/tests/mochitest/test_textattrs.html
@@ -464,7 +464,6 @@ testTextAttrs
 ID
 0
 attrs
-defAttrs
 0
 11
 )
@@ -474,7 +473,6 @@ testTextAttrs
 ID
 11
 misspelledAttrs
-defAttrs
 11
 17
 )
@@ -484,7 +482,6 @@ testTextAttrs
 ID
 17
 attrs
-defAttrs
 17
 18
 )
@@ -494,7 +491,6 @@ testTextAttrs
 ID
 18
 misspelledAttrs
-defAttrs
 18
 22
 )
@@ -741,7 +737,6 @@ testTextAttrs
 ID
 0
 attrs
-defAttrs
 0
 7
 )
@@ -786,7 +781,6 @@ testTextAttrs
 ID
 7
 attrs
-defAttrs
 7
 11
 )
@@ -801,7 +795,6 @@ testTextAttrs
 ID
 12
 attrs
-defAttrs
 11
 18
 )
@@ -998,7 +991,6 @@ testTextAttrs
 ID
 0
 attrs
-defAttrs
 0
 7
 )
@@ -1043,7 +1035,6 @@ testTextAttrs
 ID
 7
 attrs
-defAttrs
 7
 12
 )
@@ -1097,7 +1088,6 @@ testTextAttrs
 ID
 13
 attrs
-defAttrs
 12
 19
 )
@@ -1140,7 +1130,6 @@ testTextAttrs
 ID
 20
 attrs
-defAttrs
 19
 23
 )
@@ -1155,7 +1144,6 @@ testTextAttrs
 ID
 24
 attrs
-defAttrs
 23
 30
 )
@@ -1375,7 +1363,6 @@ testTextAttrs
 ID
 0
 attrs
-defAttrs
 0
 6
 )
@@ -1418,7 +1405,6 @@ testTextAttrs
 ID
 6
 attrs
-defAttrs
 6
 26
 )
@@ -1459,7 +1445,6 @@ testTextAttrs
 ID
 26
 attrs
-defAttrs
 26
 27
 )
@@ -1509,7 +1494,6 @@ testTextAttrs
 ID
 27
 attrs
-defAttrs
 27
 50
 )
@@ -1734,7 +1718,6 @@ testTextAttrs
 ID
 0
 attrs
-defAttrs
 0
 16
 )
@@ -1779,7 +1762,6 @@ testTextAttrs
 ID
 16
 attrs
-defAttrs
 16
 33
 )
@@ -1820,7 +1802,6 @@ testTextAttrs
 ID
 34
 attrs
-defAttrs
 33
 46
 )
@@ -2045,7 +2026,6 @@ testTextAttrs
 ID
 0
 attrs
-defAttrs
 0
 5
 )
@@ -2060,7 +2040,6 @@ testTextAttrs
 ID
 7
 attrs
-defAttrs
 5
 8
 )
@@ -2107,7 +2086,6 @@ testTextAttrs
 ID
 9
 attrs
-defAttrs
 8
 11
 )
@@ -2122,7 +2100,6 @@ testTextAttrs
 ID
 11
 attrs
-defAttrs
 11
 18
 )
@@ -2328,7 +2305,6 @@ testTextAttrs
 ID
 0
 attrs
-defAttrs
 0
 5
 )
@@ -2382,7 +2358,6 @@ testTextAttrs
 ID
 5
 attrs
-defAttrs
 5
 13
 )
@@ -2397,7 +2372,6 @@ testTextAttrs
 ID
 13
 attrs
-defAttrs
 13
 27
 )
@@ -2442,7 +2416,6 @@ testTextAttrs
 ID
 27
 attrs
-defAttrs
 27
 35
 )
@@ -2457,7 +2430,6 @@ testTextAttrs
 ID
 35
 attrs
-defAttrs
 35
 39
 )
@@ -2511,7 +2483,6 @@ testTextAttrs
 ID
 39
 attrs
-defAttrs
 39
 50
 )
@@ -2526,7 +2497,6 @@ testTextAttrs
 ID
 50
 attrs
-defAttrs
 50
 55
 )
@@ -2571,7 +2541,6 @@ testTextAttrs
 ID
 55
 attrs
-defAttrs
 55
 64
 )
@@ -2685,13 +2654,6 @@ defAttrs
 =
 {
 "
-language
-"
-:
-"
-en
-"
-"
 font
 -
 style
@@ -2782,7 +2744,6 @@ testTextAttrs
 ID
 0
 attrs
-defAttrs
 0
 12
 )
@@ -2790,6 +2751,13 @@ defAttrs
 attrs
 =
 {
+"
+language
+"
+:
+"
+en
+"
 }
 ;
 testTextAttrs
@@ -2797,7 +2765,6 @@ testTextAttrs
 ID
 12
 attrs
-defAttrs
 12
 13
 )
@@ -2831,6 +2798,13 @@ attrs
 =
 {
 "
+language
+"
+:
+"
+en
+"
+"
 background
 -
 color
@@ -2846,7 +2820,6 @@ testTextAttrs
 ID
 13
 attrs
-defAttrs
 13
 26
 )
@@ -2854,6 +2827,13 @@ defAttrs
 attrs
 =
 {
+"
+language
+"
+:
+"
+en
+"
 }
 ;
 testTextAttrs
@@ -2861,7 +2841,6 @@ testTextAttrs
 ID
 26
 attrs
-defAttrs
 26
 27
 )
@@ -2883,7 +2862,6 @@ testTextAttrs
 ID
 27
 attrs
-defAttrs
 27
 42
 )
@@ -2891,6 +2869,13 @@ defAttrs
 attrs
 =
 {
+"
+language
+"
+:
+"
+en
+"
 }
 ;
 testTextAttrs
@@ -2898,9 +2883,8 @@ testTextAttrs
 ID
 42
 attrs
-defAttrs
 42
-50
+43
 )
 ;
 attrs
@@ -2913,8 +2897,7 @@ testTextAttrs
 ID
 43
 attrs
-defAttrs
-42
+43
 50
 )
 ;
@@ -2964,7 +2947,6 @@ testTextAttrs
 ID
 50
 attrs
-defAttrs
 50
 57
 )
@@ -3016,7 +2998,6 @@ testTextAttrs
 ID
 57
 attrs
-defAttrs
 57
 61
 )
@@ -3057,1045 +3038,8 @@ testTextAttrs
 ID
 61
 attrs
-defAttrs
 61
 68
-)
-;
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-/
-area9
-different
-single
-style
-spans
-in
-styled
-paragraph
-ID
-=
-"
-area9
-"
-;
-tempElem
-=
-document
-.
-getElementById
-(
-ID
-)
-;
-gComputedStyle
-=
-document
-.
-defaultView
-.
-getComputedStyle
-(
-tempElem
-"
-"
-)
-;
-defAttrs
-=
-{
-"
-font
--
-style
-"
-:
-gComputedStyle
-.
-fontStyle
-"
-font
--
-size
-"
-:
-"
-10pt
-"
-"
-background
--
-color
-"
-:
-"
-rgb
-(
-255
-255
-255
-)
-"
-"
-font
--
-weight
-"
-:
-gComputedStyle
-.
-fontWeight
-"
-color
-"
-:
-gComputedStyle
-.
-color
-"
-font
--
-family
-"
-:
-gComputedStyle
-.
-fontFamily
-"
-text
--
-position
-"
-:
-gComputedStyle
-.
-verticalAlign
-}
-;
-testDefaultTextAttrs
-(
-ID
-defAttrs
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-0
-attrs
-defAttrs
-0
-6
-)
-;
-attrs
-=
-{
-"
-font
--
-size
-"
-:
-"
-12pt
-"
-}
-;
-testTextAttrs
-(
-ID
-7
-attrs
-defAttrs
-6
-12
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-13
-attrs
-defAttrs
-12
-21
-)
-;
-/
-/
-Walk
-to
-the
-span
-with
-the
-different
-background
-color
-tempElem
-=
-tempElem
-.
-firstChild
-.
-nextSibling
-.
-nextSibling
-.
-nextSibling
-;
-gComputedStyle
-=
-document
-.
-defaultView
-.
-getComputedStyle
-(
-tempElem
-"
-"
-)
-;
-attrs
-=
-{
-"
-background
--
-color
-"
-:
-gComputedStyle
-.
-backgroundColor
-}
-;
-testTextAttrs
-(
-ID
-22
-attrs
-defAttrs
-21
-36
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-37
-attrs
-defAttrs
-36
-44
-)
-;
-/
-/
-Walk
-from
-the
-background
-color
-span
-to
-the
-one
-with
-font
--
-style
-tempElem
-=
-tempElem
-.
-nextSibling
-.
-nextSibling
-;
-gComputedStyle
-=
-document
-.
-defaultView
-.
-getComputedStyle
-(
-tempElem
-"
-"
-)
-;
-attrs
-=
-{
-"
-font
--
-style
-"
-:
-gComputedStyle
-.
-fontStyle
-}
-;
-testTextAttrs
-(
-ID
-45
-attrs
-defAttrs
-44
-61
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-62
-attrs
-defAttrs
-61
-69
-)
-;
-/
-/
-Walk
-from
-span
-with
-font
--
-style
-to
-the
-one
-with
-font
--
-family
-.
-tempElem
-=
-tempElem
-.
-nextSibling
-.
-nextSibling
-;
-gComputedStyle
-=
-document
-.
-defaultView
-.
-getComputedStyle
-(
-tempElem
-"
-"
-)
-;
-attrs
-=
-{
-"
-font
--
-family
-"
-:
-gComputedStyle
-.
-fontFamily
-}
-;
-testTextAttrs
-(
-ID
-70
-attrs
-defAttrs
-69
-83
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-84
-attrs
-defAttrs
-83
-91
-)
-;
-attrs
-=
-{
-"
-text
--
-underline
--
-style
-"
-:
-"
-solid
-"
-}
-;
-testTextAttrs
-(
-ID
-92
-attrs
-defAttrs
-91
-101
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-102
-attrs
-defAttrs
-101
-109
-)
-;
-attrs
-=
-{
-"
-text
--
-line
--
-through
--
-style
-"
-:
-"
-solid
-"
-}
-;
-testTextAttrs
-(
-ID
-110
-attrs
-defAttrs
-109
-122
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-123
-attrs
-defAttrs
-122
-130
-)
-;
-/
-/
-area10
-different
-single
-style
-spans
-in
-non
--
-styled
-paragraph
-ID
-=
-"
-area10
-"
-;
-tempElem
-=
-document
-.
-getElementById
-(
-ID
-)
-;
-gComputedStyle
-=
-document
-.
-defaultView
-.
-getComputedStyle
-(
-tempElem
-"
-"
-)
-;
-defAttrs
-=
-{
-"
-font
--
-style
-"
-:
-gComputedStyle
-.
-fontStyle
-"
-font
--
-size
-"
-:
-"
-12pt
-"
-"
-background
--
-color
-"
-:
-"
-rgb
-(
-255
-255
-255
-)
-"
-"
-font
--
-weight
-"
-:
-gComputedStyle
-.
-fontWeight
-"
-color
-"
-:
-gComputedStyle
-.
-color
-"
-font
--
-family
-"
-:
-gComputedStyle
-.
-fontFamily
-"
-text
--
-position
-"
-:
-gComputedStyle
-.
-verticalAlign
-}
-;
-testDefaultTextAttrs
-(
-ID
-defAttrs
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-0
-attrs
-defAttrs
-0
-7
-)
-;
-attrs
-=
-{
-"
-font
--
-size
-"
-:
-"
-14pt
-"
-}
-;
-testTextAttrs
-(
-ID
-7
-attrs
-defAttrs
-7
-13
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-13
-attrs
-defAttrs
-13
-22
-)
-;
-/
-/
-Walk
-to
-the
-span
-with
-the
-different
-background
-color
-tempElem
-=
-tempElem
-.
-firstChild
-.
-nextSibling
-.
-nextSibling
-.
-nextSibling
-;
-gComputedStyle
-=
-document
-.
-defaultView
-.
-getComputedStyle
-(
-tempElem
-"
-"
-)
-;
-attrs
-=
-{
-"
-background
--
-color
-"
-:
-gComputedStyle
-.
-backgroundColor
-}
-;
-testTextAttrs
-(
-ID
-23
-attrs
-defAttrs
-22
-37
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-38
-attrs
-defAttrs
-37
-45
-)
-;
-/
-/
-Walk
-from
-the
-background
-color
-span
-to
-the
-one
-with
-font
--
-style
-tempElem
-=
-tempElem
-.
-nextSibling
-.
-nextSibling
-;
-gComputedStyle
-=
-document
-.
-defaultView
-.
-getComputedStyle
-(
-tempElem
-"
-"
-)
-;
-attrs
-=
-{
-"
-font
--
-style
-"
-:
-gComputedStyle
-.
-fontStyle
-}
-;
-testTextAttrs
-(
-ID
-46
-attrs
-defAttrs
-45
-62
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-63
-attrs
-defAttrs
-62
-70
-)
-;
-/
-/
-Walk
-from
-span
-with
-font
--
-style
-to
-the
-one
-with
-font
--
-family
-.
-tempElem
-=
-tempElem
-.
-nextSibling
-.
-nextSibling
-;
-gComputedStyle
-=
-document
-.
-defaultView
-.
-getComputedStyle
-(
-tempElem
-"
-"
-)
-;
-attrs
-=
-{
-"
-font
--
-family
-"
-:
-gComputedStyle
-.
-fontFamily
-}
-;
-testTextAttrs
-(
-ID
-71
-attrs
-defAttrs
-70
-84
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-85
-attrs
-defAttrs
-84
-92
-)
-;
-attrs
-=
-{
-"
-text
--
-underline
--
-style
-"
-:
-"
-solid
-"
-}
-;
-testTextAttrs
-(
-ID
-93
-attrs
-defAttrs
-92
-102
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-103
-attrs
-defAttrs
-102
-110
-)
-;
-attrs
-=
-{
-"
-text
--
-line
--
-through
--
-style
-"
-:
-"
-solid
-"
-}
-;
-testTextAttrs
-(
-ID
-111
-attrs
-defAttrs
-110
-123
-)
-;
-attrs
-=
-{
-}
-;
-testTextAttrs
-(
-ID
-124
-attrs
-defAttrs
-123
-131
 )
 ;
 /
@@ -4785,273 +3729,9 @@ p
 id
 =
 "
-area9
+output
 "
-style
-=
-"
-font
--
-size
-:
-smaller
-"
->
-Small
-<
-span
-style
-=
-"
-font
--
-size
-:
-120
-%
-"
->
-bigger
-<
 /
-span
->
-smaller
-<
-span
-style
-=
-"
-background
--
-color
-:
-blue
-;
-"
->
-background
-blue
-<
-/
-span
->
-normal
-<
-span
-style
-=
-"
-font
--
-style
-:
-italic
-;
-"
->
-Different
-styling
-<
-/
-span
->
-normal
-<
-span
-style
-=
-"
-font
--
-family
-:
-tahoma
-;
-"
->
-Different
-font
-<
-/
-span
->
-normal
-<
-span
-style
-=
-"
-text
--
-decoration
-:
-underline
-;
-"
->
-underlined
-<
-/
-span
->
-normal
-<
-span
-style
-=
-"
-text
--
-decoration
-:
-line
--
-through
-;
-"
->
-strikethrough
-<
-/
-span
->
-normal
-<
-/
-p
->
-<
-p
-id
-=
-"
-area10
-"
->
-Normal
-<
-span
-style
-=
-"
-font
--
-size
-:
-120
-%
-"
->
-bigger
-<
-/
-span
->
-smaller
-<
-span
-style
-=
-"
-background
--
-color
-:
-blue
-;
-"
->
-background
-blue
-<
-/
-span
->
-normal
-<
-span
-style
-=
-"
-font
--
-style
-:
-italic
-;
-"
->
-Different
-styling
-<
-/
-span
->
-normal
-<
-span
-style
-=
-"
-font
--
-family
-:
-tahoma
-;
-"
->
-Different
-font
-<
-/
-span
->
-normal
-<
-span
-style
-=
-"
-text
--
-decoration
-:
-underline
-;
-"
->
-underlined
-<
-/
-span
->
-normal
-<
-span
-style
-=
-"
-text
--
-decoration
-:
-line
--
-through
-;
-"
->
-strikethrough
-<
-/
-span
->
-normal
-<
-/
-p
 >
 <
 /
