Bug 476731 - Media element should fire error event when src is a 404; r=chris.double sr=roc
UltraBlame original commit: 252b7dc440db34abb1c0efae2fd778b0d9ac2774

--- a/content/media/video/test/file_access_controls.html
+++ b/content/media/video/test/file_access_controls.html
@@ -5,6 +5,30 @@ html
 head
 >
 <
+/
+head
+>
+<
+body
+onload
+=
+"
+setTimeout
+(
+load
+0
+)
+;
+"
+onunload
+=
+"
+done
+(
+)
+"
+>
+<
 script
 >
 /
@@ -38,6 +62,10 @@ gTests
 =
 [
 {
+/
+/
+Test
+0
 url
 :
 "
@@ -87,6 +115,10 @@ domain
 "
 }
 {
+/
+/
+Test
+1
 url
 :
 "
@@ -142,6 +174,10 @@ origin
 "
 }
 {
+/
+/
+Test
+2
 url
 :
 "
@@ -192,6 +228,10 @@ subdomain
 "
 }
 {
+/
+/
+Test
+3
 url
 :
 "
@@ -248,6 +288,10 @@ origin
 "
 }
 {
+/
+/
+Test
+4
 url
 :
 "
@@ -295,6 +339,10 @@ domain
 "
 }
 {
+/
+/
+Test
+5
 url
 :
 "
@@ -336,6 +384,10 @@ domain
 "
 }
 {
+/
+/
+Test
+6
 url
 :
 "
@@ -384,6 +436,10 @@ domain
 "
 }
 {
+/
+/
+Test
+7
 url
 :
 "
@@ -438,6 +494,10 @@ origin
 "
 }
 {
+/
+/
+Test
+8
 url
 :
 "
@@ -480,6 +540,10 @@ domain
 "
 }
 {
+/
+/
+Test
+9
 url
 :
 "
@@ -528,6 +592,10 @@ origin
 "
 }
 {
+/
+/
+Test
+10
 url
 :
 "
@@ -578,6 +646,10 @@ origin
 "
 }
 {
+/
+/
+Test
+11
 url
 :
 "
@@ -639,7 +711,7 @@ gTestDescription
 null
 ;
 var
-video
+gVideo
 =
 null
 ;
@@ -657,6 +729,8 @@ result
 code
 )
 {
+/
+/
 dump
 (
 (
@@ -702,6 +776,79 @@ gTestDescription
 nextTest
 (
 )
+;
+}
+function
+createVideo
+(
+)
+{
+var
+v
+=
+document
+.
+createElement
+(
+'
+video
+'
+)
+;
+v
+.
+addEventListener
+(
+'
+loadeddata
+'
+function
+(
+)
+{
+result
+(
+'
+loaded
+'
+)
+;
+}
+false
+)
+;
+v
+.
+addEventListener
+(
+'
+error
+'
+function
+(
+)
+{
+result
+(
+'
+error
+'
+)
+;
+}
+false
+)
+;
+v
+.
+id
+=
+'
+video
+'
+;
+return
+v
 ;
 }
 function
@@ -766,17 +913,6 @@ org
 :
 80
 "
-)
-;
-video
-=
-document
-.
-getElementById
-(
-'
-video
-'
 )
 ;
 /
@@ -898,6 +1034,34 @@ nextTest
 (
 )
 {
+/
+/
+dump
+(
+"
+nextTest
+(
+)
+called
+gTestNum
+=
+"
++
+gTestNum
++
+"
+gTestedRemoved
+=
+"
++
+gTestedRemoved
++
+"
+\
+n
+"
+)
+;
 netscape
 .
 security
@@ -921,6 +1085,22 @@ gTests
 length
 )
 {
+/
+/
+dump
+(
+"
+gTestNum
+=
+=
+gTests
+.
+length
+\
+n
+"
+)
+;
 if
 (
 !
@@ -942,13 +1122,13 @@ get
 same
 result
 .
-video
+gVideo
 .
 parentNode
 .
 removeChild
 (
-video
+gVideo
 )
 ;
 gTestedRemoved
@@ -962,6 +1142,20 @@ gTestNum
 }
 else
 {
+/
+/
+dump
+(
+"
+Exiting
+.
+.
+.
+\
+n
+"
+)
+;
 /
 /
 We
@@ -1000,6 +1194,8 @@ gTestNum
 .
 description
 ;
+/
+/
 dump
 (
 "
@@ -1021,12 +1217,25 @@ gTestNum
 url
 +
 "
+expecting
+:
+"
++
+gExpectedResult
++
+"
 \
 n
 "
 )
 ;
-video
+gVideo
+=
+createVideo
+(
+)
+;
+gVideo
 .
 src
 =
@@ -1037,12 +1246,42 @@ gTestNum
 .
 url
 ;
-video
+if
+(
+!
+gTestedRemoved
+)
+{
+document
+.
+body
+.
+appendChild
+(
+gVideo
+)
+;
+/
+/
+Will
+cause
+load
+(
+)
+to
+be
+invoked
+.
+}
+else
+{
+gVideo
 .
 load
 (
 )
 ;
+}
 gTestNum
 +
 +
@@ -1138,77 +1377,6 @@ done
 <
 /
 script
->
-<
-/
-head
->
-<
-body
-onload
-=
-"
-load
-(
-)
-;
-"
-onunload
-=
-"
-done
-(
-)
-"
->
-<
-!
--
--
-Change
-onloadedfirstframe
-to
-onloadeddata
-after
-bug
-462570
-lands
--
--
->
-<
-video
-id
-=
-"
-video
-"
-onloadeddata
-=
-"
-result
-(
-'
-loaded
-'
-)
-;
-"
-onerror
-=
-"
-result
-(
-'
-error
-'
-)
-;
-"
->
-<
-/
-video
 >
 <
 /
