--- a/content/media/video/test/test_autoplay.html
+++ b/content/media/video/test/test_autoplay.html
@@ -113,6 +113,16 @@ id
 '
 v1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
@@ -125,6 +135,16 @@ id
 '
 a1
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 >
 <
 /
@@ -137,6 +157,16 @@ id
 '
 v2
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 autoplay
 >
 <
@@ -150,6 +180,16 @@ id
 '
 a2
 '
+onerror
+=
+"
+event
+.
+stopPropagation
+(
+)
+;
+"
 autoplay
 >
 <
