Bug 1134330 - Mark fetch events as reloads appropriately. r=smaug
UltraBlame original commit: 283cce9dbda09a6d67bd431bcfa299df0e213496

--- a/dom/workers/test/serviceworkers/test_fetch_event.html
+++ b/dom/workers/test/serviceworkers/test_fetch_event.html
@@ -261,6 +261,11 @@ resolve
 reject
 )
 {
+var
+reloaded
+=
+false
+;
 window
 .
 onmessage
@@ -314,6 +319,11 @@ done
 "
 )
 {
+if
+(
+reloaded
+)
+{
 window
 .
 onmessage
@@ -330,6 +340,22 @@ resolve
 (
 )
 ;
+}
+else
+{
+w
+.
+location
+.
+reload
+(
+)
+;
+reloaded
+=
+true
+;
+}
 }
 }
 }
