--- a/js/src/devtools/gc-ubench/index.html
+++ b/js/src/devtools/gc-ubench/index.html
@@ -354,7 +354,38 @@ width
 height
 =
 "
-550
+400
+"
+style
+=
+"
+padding
+-
+left
+:
+10px
+"
+>
+<
+/
+canvas
+>
+<
+canvas
+id
+=
+"
+memgraph
+"
+width
+=
+"
+1080
+"
+height
+=
+"
+400
 "
 style
 =
@@ -583,6 +614,102 @@ progress
 not
 running
 )
+<
+/
+span
+>
+<
+/
+div
+<
+div
+>
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+60
+fps
+:
+<
+span
+id
+=
+"
+pct60
+"
+>
+n
+/
+a
+<
+/
+span
+>
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+45
+fps
+:
+<
+span
+id
+=
+"
+pct45
+"
+>
+n
+/
+a
+<
+/
+span
+>
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+30
+fps
+:
+<
+span
+id
+=
+"
+pct30
+"
+>
+n
+/
+a
 <
 /
 span
