--- a/browser/base/content/test/general/test_mcb_redirect_image.html
+++ b/browser/base/content/test/general/test_mcb_redirect_image.html
@@ -11,10 +11,12 @@ html
 -
 -
 Test
-1
+3
+-
+6
 for
 Bug
-418354
+1082837
 -
 See
 file
@@ -40,7 +42,7 @@ cgi
 ?
 id
 =
-418354
+1082837
 -
 -
 >
@@ -61,10 +63,61 @@ utf
 title
 >
 Bug
-418354
+1082837
 <
 /
 title
+>
+<
+script
+>
+function
+image_loaded
+(
+)
+{
+document
+.
+getElementById
+(
+"
+mctestdiv
+"
+)
+.
+innerHTML
+=
+"
+image
+loaded
+"
+;
+}
+function
+image_blocked
+(
+)
+{
+document
+.
+getElementById
+(
+"
+mctestdiv
+"
+)
+.
+innerHTML
+=
+"
+image
+blocked
+"
+;
+}
+<
+/
+script
 >
 <
 /
@@ -81,14 +134,12 @@ id
 mctestdiv
 "
 >
-script
-blocked
 <
 /
 div
 >
 <
-script
+img
 src
 =
 "
@@ -116,12 +167,26 @@ test_mcb_redirect
 .
 sjs
 ?
-script
+image_http
+"
+onload
+=
+"
+image_loaded
+(
+)
+"
+onerror
+=
+"
+image_blocked
+(
+)
 "
 >
 <
 /
-script
+image
 >
 <
 /
