--- a/addon-sdk/source/test/addons/l10n/data/test-localization.html
+++ b/addon-sdk/source/test/addons/l10n/data/test-localization.html
@@ -230,6 +230,101 @@ elements
 div
 >
 <
+a
+data
+-
+l10n
+-
+id
+=
+"
+link
+-
+attributes
+"
+title
+=
+"
+Certain
+whitelisted
+attributes
+get
+translated
+too
+"
+alt
+=
+"
+No
+"
+accesskey
+=
+"
+A
+"
+>
+<
+/
+a
+>
+<
+input
+data
+-
+l10n
+-
+id
+=
+"
+input
+"
+type
+=
+"
+text
+"
+placeholder
+=
+"
+Form
+placeholders
+are
+translateable
+"
+>
+<
+menu
+>
+<
+menuitem
+data
+-
+l10n
+-
+id
+=
+"
+contextitem
+"
+label
+=
+"
+Labels
+of
+select
+options
+and
+context
+menus
+are
+translateable
+"
+>
+<
+/
+menu
+>
+<
 /
 body
 >
