Bug 1140148 - manifest updates for mochitest-gl on Android 4.3; r=jgilbert
UltraBlame original commit: a6619aed2c9db82339cdc3fee8ae3f915468bd62

--- a/dom/canvas/test/webgl-conformance/mochi-single.html
+++ b/dom/canvas/test/webgl-conformance/mochi-single.html
@@ -772,6 +772,17 @@ OS_VERSION_ANDROID_ICS
 =
 14
 ;
+/
+/
+Jellybean
+4
+.
+3
+var
+OS_VERSION_ANDROID_JB
+=
+18
+;
 var
 ALWAYS_FAIL_TEST_FILEPATH
 =
@@ -1118,6 +1129,167 @@ OS
 .
 ANDROID
 :
+if
+(
+DriverInfo
+.
+getOSVersion
+(
+)
+=
+=
+OS_VERSION_ANDROID_JB
+)
+{
+/
+/
+Android
+4
+.
+3
+slaves
+.
+failSet
+[
+'
+conformance
+/
+extensions
+/
+oes
+-
+texture
+-
+float
+.
+html
+'
+]
+=
+true
+;
+failSet
+[
+'
+conformance
+/
+glsl
+/
+functions
+/
+glsl
+-
+function
+-
+sin
+.
+html
+'
+]
+=
+true
+;
+failSet
+[
+'
+conformance
+/
+misc
+/
+object
+-
+deletion
+-
+behaviour
+.
+html
+'
+]
+=
+true
+;
+failSet
+[
+'
+conformance
+/
+textures
+/
+tex
+-
+image
+-
+with
+-
+format
+-
+and
+-
+type
+.
+html
+'
+]
+=
+true
+;
+failSet
+[
+'
+conformance
+/
+textures
+/
+texture
+-
+mips
+.
+html
+'
+]
+=
+true
+;
+failSet
+[
+'
+conformance
+/
+textures
+/
+texture
+-
+npot
+.
+html
+'
+]
+=
+true
+;
+failSet
+[
+'
+conformance
+/
+textures
+/
+texture
+-
+size
+-
+cube
+-
+maps
+.
+html
+'
+]
+=
+true
+;
+}
+else
 if
 (
 DriverInfo
