Fix some tests that depend on synchronous scrolling. (bug 1140293 part 1, r=masayuki,mstange,kgilbert)
UltraBlame original commit: a6b9c152a7d1fa6ea97c8bf877a9731b2b539751

--- a/dom/events/test/test_bug574663.html
+++ b/dom/events/test/test_bug574663.html
@@ -232,6 +232,161 @@ Bug
 *
 *
 /
+/
+/
+SimpleTest
+'
+s
+paint_listener
+does
+not
+work
+on
+other
+windows
+so
+we
+inline
+/
+/
+a
+smaller
+version
+here
+.
+function
+waitForPaint
+(
+win
+utils
+callback
+)
+{
+win
+.
+document
+.
+documentElement
+.
+getBoundingClientRect
+(
+)
+;
+if
+(
+!
+utils
+.
+isMozAfterPaintPending
+)
+{
+callback
+(
+)
+;
+return
+;
+}
+var
+onpaint
+=
+function
+(
+)
+{
+if
+(
+!
+utils
+.
+isMozAfterPaintPending
+)
+{
+win
+.
+removeEventListener
+(
+"
+MozAfterPaint
+"
+onpaint
+)
+;
+callback
+(
+)
+;
+return
+;
+}
+}
+win
+.
+addEventListener
+(
+"
+MozAfterPaint
+"
+onpaint
+)
+;
+if
+(
+utils
+.
+isTestControllingRefreshes
+)
+{
+utils
+.
+advanceTimeAndRefresh
+(
+0
+)
+;
+}
+}
+function
+forceScrollAndWait
+(
+scrollbox
+callback
+)
+{
+let
+win
+=
+scrollbox
+.
+ownerDocument
+.
+defaultView
+;
+let
+utils
+=
+SpecialPowers
+.
+getDOMWindowUtils
+(
+win
+)
+;
+utils
+.
+advanceTimeAndRefresh
+(
+1000
+)
+;
+waitForPaint
+(
+win
+utils
+callback
+)
+;
+}
 function
 sendTouchpadScrollMotion
 (
@@ -239,6 +394,7 @@ scrollbox
 direction
 ctrl
 momentum
+callback
 )
 {
 var
@@ -275,6 +431,99 @@ isMomentum
 momentum
 }
 ;
+let
+kExtraEvents
+=
+5
+;
+var
+received
+=
+0
+;
+var
+onwheel
+=
+function
+(
+)
+{
+if
+(
++
++
+received
+=
+=
+1
++
+kExtraEvents
+)
+{
+/
+/
+We
+have
+captured
+all
+the
+outstanding
+wheel
+events
+.
+Wait
+for
+the
+/
+/
+animation
+to
+add
+itself
+to
+the
+refresh
+driver
+.
+scrollbox
+.
+removeEventListener
+(
+"
+wheel
+"
+onwheel
+)
+;
+setTimeout
+(
+function
+(
+)
+{
+forceScrollAndWait
+(
+scrollbox
+callback
+)
+;
+}
+0
+)
+;
+}
+}
+;
+scrollbox
+.
+addEventListener
+(
+"
+wheel
+"
+onwheel
+)
+;
 synthesizeWheel
 (
 scrollbox
@@ -302,11 +551,12 @@ for
 let
 i
 =
-0
+1
 ;
 i
 <
-5
+=
+kExtraEvents
 ;
 +
 +
@@ -495,35 +745,6 @@ nextTest
 (
 )
 {
-if
-(
-!
-outstandingTests
-.
-length
-)
-{
-winUtils
-.
-restoreNormalRefresh
-(
-)
-;
-win
-.
-close
-(
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-return
-;
-}
 let
 [
 ctrlKey
@@ -550,29 +771,9 @@ winUtils
 .
 fullZoom
 ;
-sendTouchpadScrollMotion
-(
-scrollbox
-1
-ctrlKey
-isMomentum
-)
-;
-winUtils
-.
-advanceTimeAndRefresh
-(
-1000
-)
-;
-/
-/
-force
-scrolling
-to
-happen
-setTimeout
-(
+let
+check
+=
 function
 (
 )
@@ -738,11 +939,44 @@ Ctrl
 ;
 }
 }
+if
+(
+!
+outstandingTests
+.
+length
+)
+{
+winUtils
+.
+restoreNormalRefresh
+(
+)
+;
+win
+.
+close
+(
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
 /
 /
 Revert
 the
 effect
+for
+the
+next
+test
 .
 sendTouchpadScrollMotion
 (
@@ -751,29 +985,27 @@ scrollbox
 1
 ctrlKey
 isMomentum
-)
-;
-winUtils
-.
-advanceTimeAndRefresh
+function
 (
-1000
 )
-;
-/
-/
-force
-scrolling
-to
-happen
+{
 setTimeout
 (
 nextTest
-20
+0
 )
 ;
 }
-20
+)
+;
+}
+sendTouchpadScrollMotion
+(
+scrollbox
+1
+ctrlKey
+isMomentum
+check
 )
 ;
 }
@@ -853,15 +1085,6 @@ SimpleTest
 .
 waitForExplicitFinish
 (
-)
-;
-SimpleTest
-.
-requestFlakyTimeout
-(
-"
-untriaged
-"
 )
 ;
 <
